[package]
name = "deblockator"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
license = "MIT"
description = "A global allocator to wrap fixed size block allocators"
repository = "https://github.com/vita-rust/vitalloc"
readme = "README.md"
keywords = ["ps-vita", "allocator"]
categories = ["no-std", "memory-management"]
edition = "2018"

[dependencies]
typenum = "^1.0.0"
spin = "^0.4.0"
cfg-if = "*"

[dev-dependencies]
jemallocator = { version = "^0.1.0", features = ["alloc_trait"] }

[badges]
travis-ci   = { repository = "vita-rust/vitalloc" }
codecov     = { repository = "vita-rust/vitalloc" }
maintenance = { status = "actively-developed" }
